--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google-cloud/translate": "^8.5.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.0",
     "@testing-library/jest-dom": "^5.17.0",
